@startuml lab-5-loan-application-state
[*] --> Draft
Draft --> Submitted : Customer starts application
Submitted --> Scoring : submit through Mobile App
Scoring --> OfferReady : Credit Score returned
Scoring --> Failed : timeout / unavailable [CON.3]
OfferReady --> Approved : Customer accepts agreement
OfferReady --> Rejected : policy cap or rule breach [CON.1]
Approved --> AccountValidated : account confirmed
Approved --> Failed : account validation failure [CON.4]
AccountValidated --> Disbursed : Core Banking confirms posting
AccountValidated --> Failed : posting confirmation failure [CON.4]
Rejected --> [*]
Disbursed --> [*]
Failed --> [*]
@enduml
